@@ -6,6 +6,12 @@ Please make entries to this log (in addition to the CVS log) that describe
 major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
+11/16/00 mpeterson@caldera.com
+------------------------------
+Changed SLPD behaviour to be less destructive on SIGHUP.  SIGHUP no longer
+dumps the entire registration database on SIGHUP.  SIGHUP only causes slpd
+to re-read configuration and static registration as well as perform DA
+discovery.
 
 *** TAG OpenSLP 0.7.8 ***
 
